--- a/package.json
+++ b/package.json
@@ -6,15 +6,36 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@vscode/sqlite3": "^5.0.8",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^1.0.5",
+    "knex-cleaner": "^1.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "vscode-sqlite3": "^4.0.11",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-plugin-json": "^3.1.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:down",
+    "seed": "knex seed:run",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --verbose --runInBand --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
